# AutoDiff

./: CMakeLists.txt  README.md
include/: add.hpp  auto_diff_graph.hpp  auto_diff_node.hpp  divide.hpp  mult.hpp  operator.hpp  pow.hpp  variable.hpp
src/: add.cpp  auto_diff_graph.cpp  auto_diff_node.cpp  divide.cpp  main.cpp  mult.cpp  operator.cpp  pow.cpp  variable.cpp
src/operators/: add.cpp  divide.cpp  mult.cpp  operator.cpp  pow.cpp
